--- a/src/less/header.less
+++ b/src/less/header.less
@@ -35,12 +35,13 @@ h1 {
 	left: auto;
 	border: none;
 	border-bottom: 1px solid #ddd;
-	padding: 0;
+	padding: 0 0 0 10px;
 	width: 200px;
 	height: 40px;
 	line-height: 30px;
 	font-size: 0;
 	z-index: 101;
+	background: #f6f6f6;
 
 	select {
 		height: 28px;
