Better vertical align in tables.

--- a/src/less/tables.less
+++ b/src/less/tables.less
@@ -11,10 +11,6 @@ th, td {
 	padding: 4px 10px;
 }
 
-tbody td {
-	vertical-align: top;
-}
-
 thead td, thead th, .odd td, tbody tr:hover td,tbody tr:hover th,
 .js .checkable .checked td, .js .checkable .checked th {
 	background: transparent;
@@ -29,6 +25,14 @@ thead td, thead th {
 	padding: 7px 10px;
 	background: transparent;
 	text-align: left;
+}
+
+tbody th {
+	padding-top: 8px;
+}
+
+tbody th, tbody td {
+	vertical-align: top;
 }
 
 tbody td[align="right"] {
