--- a/src/less/common.less
+++ b/src/less/common.less
@@ -22,6 +22,10 @@ a:link:hover, a:visited:hover {
 	text-decoration: none;
 }
 
+a sup {
+	padding: 0 5px;
+}
+
 #logins a, #tables a, #tables span {
 	background: inherit;
 }
