--- a/src/less/forms.less
+++ b/src/less/forms.less
@@ -30,9 +30,14 @@ textarea, pre[contenteditable="true"], select {
 	box-sizing: border-box;
 }
 
-/* iOS hack */
+// iOS hack
 input:not([type]), input[type="text"], input[type="email"], input[type="password"], input[type="search"], input[type="number"], textarea {
 	-webkit-appearance: none;
+}
+
+// Makes height of inputs and select the same.
+input:not([type]), input[type="text"], input[type="email"], input[type="password"], input[type="search"], input[type="number"], select {
+	height: 28px;
 }
 
 input[type="submit"] {
@@ -64,8 +69,23 @@ input[type="submit"].default {
 	box-shadow: none;
 }
 
-input[type="checkbox"] {
-	margin: 0 3px;
+input[type="image"] {
+	border: 4px solid #fff;
+	outline: 1px solid mix(@linkColor, #fff, 30%);
+	-moz-outline-radius: 2px;
+	margin-right: 5px;
+
+	&:last-child {
+		margin-right: 0;
+	}
+
+	&:hover {
+		border-color: @lightColor;
+	}
+}
+
+input[type="checkbox"], input[type="radio"] {
+	margin: 7px 5px 7px 0;
 }
 
 fieldset {
@@ -83,8 +103,7 @@ fieldset {
 		color: @linkColor;
 
 		&:hover {
-			background: #BD5200;
-			background: #fbede2;
+			background: @lightColor;
 			color: @linkColor;
 		}
 	}
