Smaller logo and more color variables

--- a/src/less/adminer.less
+++ b/src/less/adminer.less
@@ -11,6 +11,26 @@
 
 @menuWidth: 260px;
 
+@bgColor: #fff;
+@textColor: #444;
+@noteColor: #999;
+@note2Color: #bbb;
+
 @linkColor: #d55d00;
 @linkColorHover: mix(@linkColor, #000, 80%);
-@lightColor: mix(@linkColor, #fff, 10%);
+
+@blockBgColor: #f6f6f6;
+@blockBorderColor: #ddd;
+
+@inputBgColor: #fff;
+@inputTextColor: #444;
+@inputBorderColor: #ccc;
+@inputPlaceholderColor: #999;
+
+@lightBorderColor: mix(@linkColor, @inputBgColor, 60%);
+@lightBgColor: mix(@linkColor, @inputBgColor, 10%);
+
+@menuHoverColor: #eee;
+
+@codeBgColor: #e8f0fa;
+@codeBorderColor: #cde;
