--- a/src/less/plugins.less
+++ b/src/less/plugins.less
@@ -12,13 +12,13 @@ a.jush-custom:hover, a.jush-help:hover {
 // ------------------------------------------------------------------------
 
 .json {
-	border-color: #cde;
-	border-left: 7px solid #cde;
-	background: #e8f0fa;
+	border-color: @codeBorderColor;
+	border-left: 7px solid @codeBorderColor;
+	background: @codeBgColor;
 	margin: 5px 0 3px 0;
 
 	tr {
-		border-bottom: 1px solid #cde;
+		border-bottom: 1px solid @codeBorderColor;
 	}
 
 	tr:last-child {
@@ -26,7 +26,7 @@ a.jush-custom:hover, a.jush-help:hover {
 	}
 
 	th {
-		border-right: 1px solid #cde;
+		border-right: 1px solid @codeBorderColor;
 		vertical-align: top;
 	}
 
