--- a/src/less/common.less
+++ b/src/less/common.less
@@ -7,7 +7,8 @@ html {
 
 body {
 	font-family: "Helvetica Neue", Helvetica, Verdana, Arial;
-	color: #444;
+	background: @bgColor;
+	color: @textColor;
 }
 
 a, a:visited {
