Three color themes: orange, blue, green. Fixed responsive layout of side menu and bottom bar. Page zooming is allowed now. Unified design of Adminer logo and icons. Burger icon for side menu in small screens.

--- a/src/inc/common.less
+++ b/src/inc/common.less
@@ -1,3 +1,5 @@
+@import "variables.less";
+
 html {
 	/* Display vertical scrollbar to prevent jumping of whole page. */
 	overflow-y: scroll;
@@ -6,7 +8,7 @@ html {
 }
 
 body {
-	font-family: "Helvetica Neue", Helvetica, Verdana, Arial;
+	font-family: "Helvetica Neue", Helvetica, Verdana, Arial, sans-serif;
 	background: @bgColor;
 	color: @textColor;
 }
@@ -14,8 +16,7 @@ body {
 a, a:visited {
 	padding: 4px 0; /* touch friendly */
 	color: @linkColor;
-	transition: color 0.1s ease 0s;
-	transition: background-color 0.1s ease 0s;
+	transition: color 0.1s ease 0s, background-color 0.1s ease 0s;
 }
 
 a:link:hover, a:visited:hover {
