--- a/src/inc/plugins.less
+++ b/src/inc/plugins.less
@@ -1,3 +1,5 @@
+@import "variables.less";
+
 // ------------------------------------------------------------------------
 //	Jush (internal)
 // ------------------------------------------------------------------------
@@ -52,7 +54,7 @@ a.json-icon {
 		width: 20px;
 		height: 18px;
 		line-height: 18px;
-		font-family: entypo;
+		font-family: entypo, sans-serif;
 		font-size: 24pt;
 		vertical-align: -3px;
 		content: "▸";
