--- a/src/inc/links.less
+++ b/src/inc/links.less
@@ -1,7 +1,9 @@
+@import "variables.less";
+
 a[href*="&sql="]:before {
 	content: "✎";
 	padding: 0 5px;
-	font-family: entypo;
+	font-family: entypo, sans-serif;
     font-size: 24pt;
 	line-height: 10pt;
 	vertical-align: -3px;
@@ -12,7 +14,7 @@ a[href*="&sql="]:before {
 
 	a:before {
 		content: "⏴ ";
-		font-family: entypo;
+		font-family: entypo, sans-serif;
 		font-size: 24pt;
 		line-height: 10pt;
 		vertical-align: -3px;
