--- a/src/inc/menu.less
+++ b/src/inc/menu.less
@@ -1,15 +1,19 @@
+@import "variables.less";
+
 h1 {
 	height: 40px;
-}
+	white-space: nowrap;
+	overflow: hidden;
 
-#h1 {
-	display: inline-block;
-	padding: 0;
-	background: url("images/logo.png?2") 10px center no-repeat;
-	background-size: 120px;
-	text-indent: -100px;
-	width: 135px;
-	height: 40px;
+	#h1 {
+		display: inline-block;
+		padding: 0;
+		background: url("../images/logo.png?3") 10px center no-repeat;
+		background-size: 120px;
+		text-indent: -100px;
+		width: 135px;
+		height: 40px;
+	}
 }
 
 .version {
@@ -125,7 +129,7 @@ h1 {
 
 		&:before {
 			content: "📄  ";
-			font-family: entypo;
+			font-family: entypo, sans-serif;
 			font-size: 24pt;
 			line-height: 0;
 			vertical-align: -3px;
@@ -208,28 +212,16 @@ h1 {
 }
 
 @media only screen and (max-width: 768px) {
-	#menu {
-		width: 40px;
-		height: 40px;
-		bottom: auto;
-		border: none;
-		overflow: hidden;
-		background: @blockBgColor;
-
-		#h1 {
-			margin-top: 10px;
-		}
-
-		form, p, h1 * {
-			display: none;
-		}
-
-		h1:before {
-			display: block;
+	h1 {
+		&:before {
+			float: left;
+			position: relative;
+			left: 4px;
+			top: 4px;
 			width: 30px;
 			height: 30px;
-			content: "📸";
-			font-family: "entypo";
+			content: "☰";
+			font-family: "entypo", sans-serif;
 			font-size: 32pt;
 			line-height: 30px;
 			border: 1px solid @lightBorderColor;
@@ -240,10 +232,26 @@ h1 {
 			cursor: pointer;
 		}
 
+		#h1 {
+			margin-left: 10px;
+		}
+	}
+
+	#menu {
+		width: 40px;
+		height: 40px;
+		bottom: auto;
+		border: none;
+		overflow: hidden;
+		background: transparent;
+
+		form, p {
+			display: none;
+		}
+
 		&.open {
-			width: auto;
-			height: auto;
 			width: @menuWidth;
+			height: auto;
 			max-width: 100%;
 			max-height: 100%;
 			border-right: 1px solid @blockBorderColor;
@@ -252,10 +260,10 @@ h1 {
 			box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.03);
 			z-index: 200;
 			overflow-y: auto;
-		}
 
-		&.open form, &.open p, &.open h1 * {
-			display: block;
+			form, p {
+				display: block;
+			}
 		}
 	}
 }
@@ -263,16 +271,6 @@ h1 {
 @media only screen and (max-width: 270px) {
 	#menu.open {
 		border-right: none;
-	}
-
-	#h1 {
-		height: 30px;
-		background-size: 150px;
-		background-position: 10px bottom;
-	}
-
-	.version {
-		margin-left: 37px;
 	}
 }
 
@@ -282,8 +280,8 @@ h1 {
 	only screen and (-o-min-device-pixel-ratio: 3/2),
 	only screen and (min-device-pixel-ratio: 1.5)
 {
-	#h1 {
-		background-image: url("images/logo-hres.png?2");
+	h1 #h1 {
+		background-image: url("../images/logo-hres.png?3");
 		background-size: 120px;
 	}
 }
