--- a/src/inc/variables.less
+++ b/src/inc/variables.less
@@ -1,14 +1,3 @@
-@import "cleanup.less";
-@import "fonts.less";
-@import "common.less";
-@import "forms.less";
-@import "header.less";
-@import "content.less";
-@import "menu.less";
-@import "links.less";
-@import "tables.less";
-@import "plugins.less";
-
 @menuWidth: 260px;
 
 @bgColor: #fff;
@@ -16,7 +5,7 @@
 @noteColor: #999;
 @note2Color: #bbb;
 
-@linkColor: #d55d00;
+@linkColor: #4c71a6;
 @linkColorHover: mix(@linkColor, #000, 80%);
 
 @blockBgColor: #f6f6f6;
