--- a/src/inc/header.less
+++ b/src/inc/header.less
@@ -1,12 +1,11 @@
 @import "variables.less";
 
 #lang {
-	position: absolute;
+	position: fixed;
 	right: 0;
 	top: 0;
 	left: auto;
 	border: none;
-	border-bottom: 1px solid @blockBorderColor;
 	padding: 0 0 0 10px;
 	width: 190px;
 	height: 40px;
