--- a/src/inc/menu.less
+++ b/src/inc/menu.less
@@ -77,7 +77,7 @@ h1 {
 
     #tables, #logins {
         border-bottom: 1px solid @blockBorderColor;
-        padding: 0;
+        padding: 0 0 25px;
     }
 
     .message {
